--- a/src/styles/Principles.css
+++ b/src/styles/Principles.css
@@ -65,7 +65,7 @@
 	justify-self: right;
 }
 
-.principles-img img {
+.principles-icon {
 	width: 60%;
 }
 
