--- a/src/styles/Subfeature.css
+++ b/src/styles/Subfeature.css
@@ -14,6 +14,7 @@
 
 .subfeature-img img {
 	width: 55%;
+	height: auto;
 	margin-top: 0.5rem;
 }
 
